--- a/2021.10.09 („Povestea lui Harap-Alb” de Ion Creangă)/Eseu basm cult/Eseu_basm_cult.tex
+++ b/2021.10.09 („Povestea lui Harap-Alb” de Ion Creangă)/Eseu basm cult/Eseu_basm_cult.tex
@@ -1,45 +1,23 @@
-% Document preamble
-\documentclass[
-12pt,
-a4paper
-]{article}
+% Include the preamble
+\input{../../preamble.tex}
 
-% Packages
-\usepackage[utf8]{inputenc}         % UTF-8 support
-\usepackage[T1]{fontenc}            % Proper hyphenation
-\usepackage[romanian]{babel}        % Romanian characters support
-\usepackage{indentfirst}            % Add paragraph indentation even after a section
-\usepackage[margin=2.7cm, marginparwidth=2cm, marginparsep=3mm]{geometry} % Make document margins smaller
-\usepackage{marginnote}             % Notes on the margins of a document (more advanced \marginpar)
-\usepackage{titlesec}               % Customize titles
+\newcommand{\operatitle}{\textbfit{„Povestea lui Harap-Alb”}} % title of the text
+\newcommand{\operaauthor}{Ion Creangă} % author of the text
 
-% Custom titles, sections, subsections etc. format
-\titleformat*{\section}{\large\bfseries}
-\titleformat{\subsection}{\normalfont\normalfont\bfseries}{}{0pt}{}
-
-% Page numbering
-%\pagenumbering{gobble} % uncomment if you want to disable it
-
-% Custom commands
-% Format: \newcommand{\command}{action (add '\ ' or '{}' if it won't add a space properly)}
-\newcommand{\operatitle}{\textbf{\textit{„Povestea lui Harap-Alb”\ }}} % title of the commented opera
-\newcommand{\operaauthor}{Ion Creangă\ }                               % author of the commented opera
-
-% Basic document info
 \title{Eseu cu privire la tema și viziunea despre lume dintr-un basm cult studiat}
-\date{}   % Show no date in the title
-\author{} % Empty author to not get a warn about missing author
+
 
 \begin{document}
 \maketitle % Show the title
 %\reversemarginpar % put margin notes on left instead of on right
 
-
 % Beginning of text
+
 
 \subsection{Context}
 
-\operatitle de \operaauthor este un basm cult, publicat în revista „Convorbiri literare”, în anul 1877.
+\operatitle\ de \operaauthor\ este un basm cult, publicat în revista \textit{„Convorbiri literare”}, în anul 1877.
+
 
 \section{Evidențierea trăsăturilor care fac posibilă încadrarea basmului studiat în specia literară pe care o ilustrează}
 \marginnote{personaje simbolice}[0.3cm]
@@ -48,21 +26,23 @@ Basmul cult este o specie narativă pluriepisodică implicând fabulosul, cu num
 \marginnote{prezența fabulosului}[0.3cm]
 Acțiunea basmului implică prezența fabulosului și este supusă unor stereotipii care înfățișează parcurgerea drumului maturizării de către erou. Conflictul dintre bine și rău se încheie prin victoria forțelor binelui. Reperele temporale și spațiale sunt vagi, nedeterminate. Elemente de compoziție tipice vizează clișee compoziționale/formule specifice, cifre și obiecte magice, procedeul triplicării.
 
+
 \section{Ilustrarea temei prin episoade/citate/secvențe comentate}
-\underline{Titlul} sugerează tema basmului: maturizarea mezinului craiului. Numele personajului îi reflectă condiția duală: rob, slugă (Harap) de origine nobilă (Alb). Motive narative specifice, prezente și în \operatitle, sunt: superioritatea mezinului, călătoria, supunerea prin vicleșug, muncile, demascarea răufăcătorului (Spânul), pedeapsa, căsătoria.
+Titlul sugerează tema basmului: maturizarea mezinului craiului. Numele personajului îi reflectă condiția duală: rob, slugă (Harap) de origine nobilă (Alb). Motive narative specifice, prezente și în \operatitle, sunt: superioritatea mezinului, călătoria, supunerea prin vicleșug, muncile, demascarea răufăcătorului (Spânul), pedeapsa, căsătoria.
 
-\section{Prezentarea elementelor de structură și de compoziție ale textului narativ, semnificative pentru tema și viziunea despre lume din basmul cult studiat {\footnotesize (de exemplu: acțiune, conflict, relații temporale și spațiale, incipit, final, tehnici narative, perspectivă narativă, registre stilistice, limbajul personajelor etc.)}}
-Întâmplările sunt relatate din perspectiva unui narator omniscient, care intervine adesea prin comentarii sau reflecții caracterizate prin umor sau oralitate. Narațiunea la persoana a III-a alternează cu dialogul.
 
-Subiectul basmului urmărește modul în care personajul principal, Harap-Alb, parcurge un drum al inițierii, la finalul căruia devine împărat, adică trece într-un plan superior al eroului (caracterul de \textit{Bildungsroman} al basmului).
+\section{Prezentarea elementelor de structură și de compoziție ale textului narativ, semnificative pentru tema și viziunea despre lume din basmul cult studiat {\footnotesize\normalfont (de exemplu: acțiune, conflict, relații temporale și spațiale, incipit, final, tehnici narative, perspectivă narativă, registre stilistice, limbajul personajelor etc.)}}
+Întâmplările sunt relatate din perspectiva unui narator omniscient, care intervine adesea prin comentarii sau reflecții caracterizate prin umor sau oralitate. Narațiunea la persoana a \rom{3}-a alternează cu dialogul.
+
+Subiectul basmului urmărește modul în care personajul principal, Harap-Alb, parcurge un drum al inițierii, la finalul căruia devine împărat, adică trece într-un plan superior de existență, care înseamnă modificarea statutului social și spiritual al eroului (caracterul de \textit{Bildungsroman} al basmului).
 
 \marginnote{compoziție}[0.8cm]
-Cele trei ipostaze ale protagonistului corespund, în plan compozițional, unor părți narative, etape ale drumului inițiatic: etapa inițială, de pregătire pentru drum, la curtea craiului - \textit{„fiul craiului”, „mezinul”} (naivul); parcurgerea drumului inițiatic - \textit{Harap-Alb} (novicele/cel supus inițierii); răsplata - \textit{împăratul} (inițiatul).
+Cele trei ipostaze ale protagonistului corespund, în plan compozițional, unor părți narative, etape ale drumului inițiatic: etapa inițială, de pregătire pentru drum, la curtea craiului -- \textit{„fiul craiului”, „mezinul”} (naivul); parcurgerea drumului inițiatic -- \textit{Harap-Alb} (novicele/cel supus inițierii); răsplata -- \textit{împăratul} (inițiatul).
 
 \marginnote{tehnică narativă}[0.8cm]
-Creangă utilizează triplicarea (triplarea situațiilor), dar supralicitează procedeul, astfel că eroul nu are de trecut doar trei probe, ci mai multe serii de probe, potrivit avertismentului dat de tată: \textit{„să te ferești de omul roș, iar mai ales de omul spân, [...] că sunt foarte șugubeți”}. În basm, sunt prezente numerele magice, simbolice: 3, 12, 24, și obiectele miraculoase, unele fiind grupate câte trei (\textit{„trei smicele de măr dulce și apă vie și apă moartă”}).
+Creangă utilizează triplicarea (triplarea situațiilor), dar supralicitează procedeul, astfel că eroul nu are de trecut doar trei probe, ci mai multe serii de probe, potrivit avertismentului dat de tată: \textit{„să te ferești de omul roș, iar mai ales de omul spân,} [...] \textit{că sunt foarte șugubeți”}. În basm, sunt prezente numerele magice, simbolice: 3, 12, 24, și obiectele miraculoase, unele fiind grupate câte trei (\textit{„trei smicele de măr dulce și apă vie și apă moartă”}).
 
-Simetria incipit - final se realizează prin formule tipice, formula inițială: \textit{„Amu cică era odată”}. Formula finală include o comparație între cele două lumi - a fabulosului și a realului.
+Simetria incipit -- final se realizează prin formule tipice, formula inițială: \textit{„Amu cică era odată”}. Formula finală include o comparație între cele două lumi -- a fabulosului și a realului.
 
 Precizate în incipit, reperele temporale și spațiale sunt vagi, nedeterminate: \textit{„Amu cică era odată într-o țară un crai, care avea trei feciori”}. Acțiunea începe la \textit{„o margine a pământului”} și continuă la cealaltă margine.
 
@@ -71,14 +51,16 @@ Acțiunea se desfășoară linear, cronologic, prin înlănțuirea secvențelor 
 
 Situația inițială (expozițiunea) prezintă o stare de echilibru: un crai avea trei feciori, iar în alt capăt de lume, un frate mai mare al său, Verde-Împărat, avea doar fete.
 
-Tulburarea echilibrului (intriga) are drept cauză o lipsă relevată de scrisoarea lui Verde-Împărat: absența moștenitorului pe linie masculină (\underline{motivul împăratului fără} \underline{urmași}). Craiul este rugat de fratele său să i-l trimită \textit{„pe cel mai vrednic dintre nepoți”}, ca să-i urmeze la tron.
+Tulburarea echilibrului (intriga) are drept cauză o lipsă relevată de scrisoarea lui Verde-Împărat: absența moștenitorului pe linie masculină (motivul împăratului fără urmași). Craiul este rugat de fratele său să i-l trimită \textit{„pe cel mai vrednic dintre nepoți”}, ca să-i urmeze la tron.
 
 Acțiunea de recuperare a echilibrului (desfășurarea acțiunii) cuprinde mai multe episoade.
 
 \marginnote{momentele subiectului}[0.3cm]
-Căutarea eroului se concretizează prin încercarea la care își supune craiul băieții: se îmbracă în piele de urs și iese fiecăruia în față de sub un pod. Fiul cel mic reușește să treacă această probă a curajului (\underline{motivul superiorității mezinului}), după o etapă pregătitoare, în care este ajutat de Sfânta Duminică, drept răsplată pentru că a miluit-o cu un ban.
+Căutarea eroului se concretizează prin încercarea la care își supune craiul băieții: se îmbracă în piele de urs și iese fiecăruia în față de sub un pod. Fiul cel mic reușește să treacă această probă a curajului (motivul superiorității mezinului), după o etapă pregătitoare, în care este ajutat de Sfânta Duminică, drept răsplată pentru că a \hbox{miluit-o} cu un ban.
 
-Întrucât a depășit proba de la pod, simbol al trecerii spre altă etapă a vieții, tatăl continuă inițierea fiului mezin și îl sfătuiește să se ferească de omul spân și de omul roș (\underline{motivul interdicției}).
+Întrucât a depășit proba de la pod, simbol al trecerii spre altă etapă a vieții, tatăl continuă inițierea fiului mezin și îl sfătuiește să se ferească de omul spân și de omul roș (motivul interdicției) și îi dăruiește pielea de urs.
+
+Pe drum, pentru că se rătăcește în pădurea-labirint și crede că se află în \textit{„țara spânilor”}, fiul cel mic al craiului își ia drept slugă și călăuză un spân (încălcarea interdicției).
 
 Coborârea fiului de crai în fântână reprezintă o secvență narativă importantă întrucât înșelătoria provoacă evoluția conflictului. Spânul îi fură identitatea, îl transformă în rob, îi dă numele de Harap-Alb și îi trasează proiectul existențial, spunându-i că va trebui să moară și să învie ca să-și recapete identitatea (jurământul din fântână).
 
@@ -86,11 +68,11 @@ Spânul îl va supune la probe dificile, în care va demonstra calitățile mora
 
 Primele două probe le trece cu ajutorul unor obiecte magice de la Sfânta Duminică.
 
-A treia probă cuprinde mai multe serii de probe (triplicarea), este o altă etapă a inițierii, mai complexă și necesită mai multe ajutoare. Pe drumul spre Împăratul Roș, \underline{crăiasa furnicilor și crăiasa albinelor} îi dăruiesc câte o aripă drept răsplată pentru că le-a ajutat poporul de gâze, iar cei cinci tovarăși cu puteri supranaturale îl însoțesc deoarece a fost prietenos: \underline{Gerilă, Flămânzilă, Setilă, Ochilă și Păsări-Lăți-Lungilă.}
+A treia probă cuprinde mai multe serii de probe (triplicarea), este o altă etapă a inițierii, mai complexă și necesită mai multe ajutoare. Pe drumul spre Împăratul Roș, crăiasa furnicilor și crăiasa albinelor îi dăruiesc câte o aripă drept răsplată pentru că le-a ajutat poporul de gâze, iar cei cinci tovarăși cu puteri supranaturale îl însoțesc deoarece a fost prietenos: Gerilă, Flămânzilă, Setilă, Ochilă și Păsări-Lăți-Lungilă.
 
-Datorită acestor personaje himerice, donatori și ajutoare, protagonistul probează dobândirea calităților solicitate de probele prin care Împăratul Roș tinde să îndepărteze ceata de pețitori (casa înroșită în foc, ospățul, alegerea macului de nisip), ca și acelea care o vizează direct pe fată (fuga nocturnă a fetei, transformarea în pasăre, ghicitul/\underline{motivul dublului} și proba impusă de fată: aducerea a \textit{„trei smicele de măr dulce și apă vie și apă moartă de unde se bat munții în capete}).
+Datorită acestor personaje himerice, donatori și ajutoare, protagonistul probează dobândirea calităților solicitate de probele prin care Împăratul Roș tinde să îndepărteze ceata de pețitori (casa înroșită în foc, ospățul, alegerea macului de nisip), ca și acelea care o vizează direct pe fată (fuga nocturnă a fetei transformată în pasăre, ghicitul/motivul dublului și proba impusă de fată: aducerea a \textit{„trei smicele de măr dulce și apă vie și apă moartă de unde se bat munții în capete}).
 
-Lichidarea înșelătoriei și acțiunea reparatorie, corespunzătoare punctului culminant, se petrec la curtea lui Verde-Împărat, unde Harap-Alb se întoarce cu fata Împăratului Roș, care dezvăluie adevărata lui identitate. Încercarea Spânului de a-l ucide pe Harap-Alb (o formă a momentului violenței) este ratată. Lichidarea violenței nu-i aparține eroului, \underline{ca în basmul popular}, ci altui personaj, calul năzdrăvan. Episodul care cuprinde scena tăierii capului personajului principal și a reînvierii lui de către fata împăratului, cu ajutorul obiectelor magice, are semnificația morții inițiatice.
+Lichidarea înșelătoriei și acțiunea reparatorie, corespunzătoare punctului culminant, se petrec la curtea lui Verde-Împărat, unde Harap-Alb se întoarce cu fata Împăratului Roș, care dezvăluie adevărata lui identitate. Încercarea Spânului de a-l ucide pe Harap-Alb (o formă a momentului violenței) este ratată. Lichidarea violenței nu-i aparține eroului, ca în basmul popular, ci altui personaj, calul năzdrăvan. Episodul care cuprinde scena tăierii capului personajului principal și a reînvierii lui de către fata împăratului, cu ajutorul obiectelor magice, are semnificația morții inițiatice.
 
 Deznodământul constă în refacerea echilibrului și răsplata eroului. El reintră în posesia paloșului și primește recompensa: pe fata Împăratului Roș și împărăția, ceea ce confirmă maturizarea.
 
@@ -105,10 +87,8 @@ Spânul nu este doar o întruchipare a răului, ci are și rolul inițiatorului,
 
 Mijloacele de caracterizare sunt directe și indirecte.
 
-%\section{Exprimarea unei opinii despre modul în care se reflectă o idee sau tema în basmul cult pentru care ai optat}
-%În opinia mea, Harap-Alb nu întruchipează tipul eroului \textbf{\textit{voinic}} din basmele populare, ci pe acela al eroului \textbf{\textit{vrednic}}, pentru că evoluția sa reflectă concepția despre lume a scriitorului, prin umanizarea fantasticului.
 
 \subsection{Concluzie}
 
-Basmul este \textit{„o oglindire... a vieții în moduri fabuloase”}. \operatitle este un basm cult având ca particularități umanizarea fantasticului, individualizarea personajelor prin limbaj, umorul și oralitatea.
+Basmul este \textit{„o oglindire... a vieții în moduri fabuloase”}. \operatitle\ este un basm cult având ca particularități umanizarea fantasticului, individualizarea personajelor prin limbaj, umorul și oralitatea.
 \end{document}
