--- a/2021.10.09 („Povestea lui Harap-Alb” de Ion Creangă)/Eseu personaj basm cult/Eseu_personaj_basm_cult.tex
+++ b/2021.10.09 („Povestea lui Harap-Alb” de Ion Creangă)/Eseu personaj basm cult/Eseu_personaj_basm_cult.tex
@@ -1,65 +1,43 @@
-% Document preamble
-\documentclass[
-12pt,
-a4paper
-]{article}
+% Include the preamble
+\input{../../preamble.tex}
 
-% Packages
-\usepackage[T1]{fontenc}            % Proper hyphenation
-\usepackage[utf8]{inputenc}         % UTF-8 support
-\usepackage[romanian]{babel}        % Romanian characters support
-\usepackage{indentfirst}            % Add paragraph indentation even after a section
-\usepackage[margin=2.7cm, marginparwidth=2cm, marginparsep=3mm]{geometry} % Make document margins smaller
-\usepackage{marginnote}             % Notes on the margins of a document (more advanced \marginpar)
-\usepackage{titlesec}               % Customize titles
+\newcommand{\operatitle}{\textbfit{„Povestea lui Harap-Alb”}} % title of the text
+\newcommand{\operaauthor}{Ion Creangă} % author of the text
 
-% Custom titles, sections, subsections etc. format
-\titleformat*{\section}{\large\bfseries}
-\titleformat{\subsection}{\normalfont\normalfont\bfseries}{}{0pt}{}
-
-% Page numbering
-%\pagenumbering{gobble} % uncomment if you want to disable it
-
-% Custom commands
-% Format: \newcommand{\command}{action (add '\ ' or '{}' if it won't add a space properly)}
-\newcommand{\operatitle}{\textbf{\textit{„Povestea lui Harap-Alb”\ }}} % title of the commented opera
-\newcommand{\operaauthor}{Ion Creangă\ }                               % author of the commented opera
-
-% Basic document info
 \title{Eseu despre particularitățile de construcție a personajului principal dintr-un basm cult studiat}
-\date{}   % Show no date in the title
-\author{} % Empty author to not get a warn about missing author
+
 
 \begin{document}
 \maketitle % Show the title
 %\reversemarginpar % put margin notes on left instead of on right
 
-
 % Beginning of text
+
 
 \subsection{Context}
 
-\operatitle de \operaauthor este un basm cult, publicat în revista „Convorbiri literare”, în anul 1877.
+\operatitle\ de \operaauthor\ este un basm cult, publicat în revista \textit{„Convorbiri literare”}, în anul 1877.
 
-{\footnotesize(Introducerea este comună cu aceea a comentariului!)}
 
 \section{Precizarea statutului social, psihologic, moral etc. al personajului ales}
 
 \marginnote{erou atipic}[0.8cm]
 Harap-Alb este protagonistul basmului, întruchipare a binelui, dar este un erou atipic de basm, deoarece este lipsit de însușiri supranaturale, fiind construit realist, ca o ființă complexă, care învață din greșeli și progresează. De aceea este personaj \textit{„rotund”}, ieșind din stereotipia superiorității mezinului. Este personaj \textit{„tridimensional”}, căci iese din tipar, surprinde, ca, de exemplu, atunci când îi dă calului cu frâul în cap sau râde împreună cu ceilalți de Gerilă, în casa de aramă.
 
-\marginnote{de la naivitate la în\-țe\-lep\-ciu\-ne}[0.8cm]
-Statutul inițial al eroului este cel de neinițiat. Mezinul craiului este naiv, nu știe să distingă adevărul de minciună, să vadă caracterul unui om dincolo de aparențe. Are nevoie de experiența vieții spre a dobândi înțelepciune. Se deosebește de frații săi, încă de la început, prin bunătate, calitate răsplătită de sfaturile Sfintei Duminici, după ce o miluiește cu un ban. Deși are calitățile necesare unui viitor împărat, în viziunea autorului, fiind \textit{„cel mai \textbf{vrednic} dintre nepoți”}, cum spune Împăratul Verde, acestea nu sunt individualizate de la început, ci și le descoperă prin intermediul probelor la care este supus, când dovedește generozitate, prietenie, responsabilitate.
+\marginnote{de la naivitate la înțelepciune}[0.8cm]
+Statutul inițial al eroului este cel de neinițiat. Mezinul craiului este naiv, nu știe să distingă adevărul de minciună, să vadă caracterul unui om dincolo de aparențe. Are nevoie de experiența vieții spre a dobândi înțelepciune. Se deosebește de frații săi, încă de la început, prin bunătate, calitate răsplătită de sfaturile Sfintei Duminici, după ce o miluiește cu un ban. Deși are calitățile necesare unui viitor împărat, în viziunea autorului, fiind \textit{„cel mai \textbf{vrednic} dintre nepoți”}, cum spune Împăratul Verde, acestea nu sunt individualizate de la început, ci și le descoperă prin intermediul probelor la care este supus, când dovedește generozitate, prietenie, respectare a jurământului, curaj, responsabilitate.
 
-Numele Harap-Alb semnifică sclav-alb, rob de origine nobilă, dar și condiția de învățăcel, faptul de a fi supus inițierii, transformării. Cele trei nume ale lui corespund, în plan compozițional, celor trei etape ale drumului inițiatic: la început - \textit{„fiul craiului”, mezinul (naivul)}; pe parcursul călătoriei - \textit{Harap-Alb (învățăcelul)}; la sfârșit - \textit{împăratul (inițiatul)}.
+Numele Harap-Alb semnifică sclav-alb, rob de origine nobilă, dar și condiția de învățăcel, faptul de a fi supus inițierii, transformării. Cele trei nume ale lui corespund, în plan compozițional, celor trei etape ale drumului inițiatic: la început -- \textit{„fiul craiului”, mezinul (naivul)}; pe parcursul călătoriei -- \textit{Harap-Alb (învățăcelul)}; la sfârșit -- \textit{împăratul (inițiatul)}.
 
-\section{Ilustrarea a patru elemente de structură și de compoziție ale basmului, semnificative pentru realizarea personajului din basmul cult studiat {\footnotesize(de exemplu: acțiune, conflict, relații temporale și spațiale, incipit, final, tehnici narative, perspectivă narativă, registre stilistice, limbajul personajelor etc.)}}
+
+\section{Ilustrarea elementelor de structură și de compoziție ale basmului, semnificative pentru realizarea personajului din basmul cult studiat {\footnotesize\normalfont (de exemplu: acțiune, conflict, relații temporale și spațiale, incipit, final, tehnici narative, perspectivă narativă, registre stilistice, limbajul personajelor etc.)}}
 
 Titlul sugerează tema basmului: maturizarea mezinului craiului. Concret, eroul parcurge o aventură imaginară, un drum al maturizării, în care dobândește valori morale și etice, pentru ca la final să devină împărat (basmul are, așadar, valoare de Bildungsroman).
 
 Acțiunea se desfășoară linear, prin înlănțuirea secvențelor narative, respectă modelul structural al basmului și implică prezența fabulosului, dar mai puțin în ceea ce-l privește strict pe mezin. Conflictul dintre bine și rău se încheie prin victoria forțelor binelui. Este amplificat procedeul compozițional al triplicării în cazul probelor pe care eroul le are de trecut. Sunt prezente cifre și obiecte magice.
 
 Personajele (oameni, dar și \textit{„ființe himerice”} cu comportament omenesc) îndeplinesc, prin raportare la erou, o serie de funcții (antagonist, ajutoare, donatori), ca în basmul popular, dar sunt individualizate, mai ales, prin limbaj.
+
 
 \section{Ilustrarea trăsăturilor personajului ales, prin secvențe \\ narative/situații semnificative sau prin citate comentate}
 
@@ -93,11 +71,8 @@ La întoarcerea la curtea lui Verde-Împărat are loc recunoașterea și transfi
 
 Spânul este demascat de fată, o \textit{„farmazoană”} (are puteri supranaturale). El îi taie capul lui Harap-Alb și îl dezleagă astfel pe erou de jurământul supunerii, semn că inițierea este încheiată, iar calul îl omoară pe răufăcător. Eroul este înviat de fată cu ajutorul obiectelor magice. Învierea este o trecere la o altă identitate: aceea de împărat iubit, slăvit și puternic. Pentru vrednicia lui, primește răsplata cuvenită: nunta și împărăția.
 
-%\section{Susținerea unei opinii despre modul în care se reflectă o idee sau tema basmului cult în construcția personajului}
-
-%În opinia mea, trecerea protagonistului prin încercări dificile, ca și experiența con\-di\-ți\-ei umilitoare de rob la dispoziția unui stăpân nedrept, conturează sensul didactic al basmului, care este exprimat de Sfânta Duminică. Potrivit viziunii despre lume a scriitorului, calitățile necesare unui împărat \textit{„mare și tare”} sunt înțelepciunea, bunătatea și cinstea, calități dovedite de \textit{„omul de soi bun”} pe parcursul unor probe dificile.
 
 \subsection{Concluzie}
 
-În concluzie, deși este un personaj de basm, eroul nu reprezintă doar tipul voinicului, ca Făt-Frumos din basmele populare, ci este și un \textit{„om de soi bun”} (G. Călinescu), eroul \textit{„vrednic”} (cum spune Verde-Împărat) care traversează o serie de probe, se maturizează și devine împărat. Basmul poate fi, astfel, considerat un Bildungsroman.
+În concluzie, deși este un personaj de basm, eroul nu reprezintă doar tipul voinicului, ca Făt-Frumos din basmele populare, ci este și un \textit{„om de soi bun”}, eroul \textit{„vrednic”} (cum spune Verde-Împărat) care traversează o serie de probe, se maturizează și devine împărat. Basmul poate fi, astfel, considerat un Bildungsroman.
 \end{document}
