--- a/brong_latex_template.tex
+++ b/brong_latex_template.tex
@@ -22,9 +22,9 @@
 %\usepackage[utf8]{inputenc} % UTF-8 support, disabled because of switch to XeLaTeX
 %\usepackage[T1]{fontenc}    % Proper hyphenation, disabled because of switch to XeLaTeX
 \usepackage[romanian]{babel} % Romanian characters support
-\usepackage{indentfirst}     % Add paragraph indentation even after a section
-\usepackage{marginnote}      % Notes on the margins of a document (more advanced \marginpar)
-\usepackage{titlesec}        % Customize titles
+%\usepackage{indentfirst}     % Add paragraph indentation even after a section
+%\usepackage{marginnote}      % Notes on the margins of a document (more advanced \marginpar)
+%\usepackage{titlesec}        % Customize titles
 
 
 % Custom format for titles, sections, subsections etc.
@@ -40,17 +40,17 @@
 % Format: \newcommand{\command}[variable]{action #variable}
 \newcommand{\rom}[1]{\uppercase\expandafter{\romannumeral #1\relax}} % Roman numerals
 \newcommand{\textbfit}[1]{\textbf{\textit{#1}}}                      % combine bold and italic
-\newcommand{\largertext}[1]{
- \vspace{0.0cm}
- \normalfont\textbf{#1}
- \vspace{0.25cm}
-} % kinda larger text and bolded
+%\newcommand{\largertext}[1]{
+% \vspace{0.0cm}
+% \normalfont\textbf{#1}
+% \vspace{0.25cm}
+%} % kinda larger text and bolded
 
 
 % Basic document info
 \title{}
-\date{}   % Show no date in the title
-\author{} % Empty author to not get a warn about missing author
+\date{}
+\author{}
 
 
 \begin{document}
